3/2/2006
Added validation to ensure script and macro handlers are not called if they have not yet fully initialised.
Improved error handling if a correct configuration script has not been specified.

2/2/2006
Released V1.5b11
Ensure macro, calendar and script lists are sent to the client for every client connection.


1/2/2006
Released V1.5b10
Security
Added a 3 minute grace period for flash client connections before the security message appears. This will allow
restarts of the client to not trigger a 'number of clients' security violation.

General Code
Added a hook for every model which is called on every new client connection, doClientStartup.
Removed AWT gui harness for main application, it is not longer used and caused maintenance problems.
Refactored configuration module to use factory singleton pattern, should facilitate testing.
Began to integrate a server ID concept to facilitate master slave development.

 
26/1/2006
Released V1.5b9
Calendar.
Added the ability to store EXTRA, EXTRA2,EXTRA3, COMMAND fields in the calendar record. 
These are passed to the macro command when it runs. 
Extra4,EXTRA5 are unavailable as they are used internally to pass information to the running macro.

For example the following macro will switch the light passed in the extra field on. 
It will be set to the level specified in extra2, the macro will pause for the time specified
in extra3 then switch it off.

 <CONTROL KEY="MACRO" COMMAND="getList" EXTRA="Light On" TYPE="" STATUS="noDelete,noEdit" RUNNING="0">
    <CONTROL KEY="%EXTRA%" COMMAND="on" EXTRA="%EXTRA2%" EXTRA2="" EXTRA3="" EXTRA4="" EXTRA5="" />
        <CONTROL KEY="" COMMAND="pause" EXTRA="%EXTRA3%"  />
 <CONTROL KEY="%EXTRA%" COMMAND="off" EXTRA="" EXTRA2="" EXTRA3="" EXTRA4="" EXTRA5="" />


The appropriate calendar entry to run this macro once would be