@@ -136,7 +136,7 @@
         <!-- the key is the HAL zone, Display name is the flash icon name -->
 
         !-- ______________________________________  DynaLite DEFS  ____________________  -->
-        <DEVICE ACTIVE="N" DEVICE_TYPE="DYNALITE" DESCRIPTION="DynaLite Lights">
+        <DEVICE ACTIVE="Y" DEVICE_TYPE="DYNALITE" DESCRIPTION="DynaLite Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N"  FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="NONE" />
@@ -144,12 +144,14 @@
                         <IP ACTIVE="Y" IP_ADDRESS="192.168.1.70" PORT="4999"/>
                 </CONNECTION>
                 <PARAMETERS>
-                		<ITEM NAME="PROTOCOL" VALUE="Linear" />
+                		<ITEM NAME="PROTOCOL" VALUE="CLASSIC" />
                 </PARAMETERS>
                 <DYNALITE>
                 
-                        <CONTACT_CLOSURE ACTIVE="Y" KEY="01" BOX="01" NAME="Button 1" DISPLAY_NAME="BUTTON_1" />
-                        <CONTACT_CLOSURE ACTIVE="Y" KEY="01" BOX="02" NAME="Button 2" DISPLAY_NAME="BUTTON_2" />
+                        <CONTACT_CLOSURE ACTIVE="Y" KEY="01" BOX="02" NAME="Button 1" DISPLAY_NAME="BUTTON_1" />
+                        <CONTACT_CLOSURE ACTIVE="Y" KEY="02" BOX="02" NAME="Button 2" DISPLAY_NAME="BUTTON_2" />
+                        
+                        <IR ACTIVE="Y" KEY="01" BOX="02" NAME="IR 1" DISPLAY_NAME="IR_1" />
                         
                         <LIGHT_DYNALITE_AREA ACTIVE="Y" BLA="01" KEY="01" NAME="Area 01" DISPLAY_NAME="GARAGE_LIGHT" />
                         <LIGHT_DYNALITE_AREA ACTIVE="Y" BLA="01" KEY="02" NAME="Area 02" DISPLAY_NAME="BBQ_LIGHT" />
@@ -162,7 +164,7 @@
         </DEVICE>
 
         !-- ______________________________________  CBUS DEFS  ____________________  -->
-        <DEVICE ACTIVE="Y" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
+        <DEVICE ACTIVE="N" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="RTSCTS" />
@@ -328,7 +330,7 @@
                 </COMFORT>
         </DEVICE>
         <!-- _____________________________ COMFORT DEFS _____________________________-->
-        <DEVICE ACTIVE="Y" DEVICE_TYPE="COMFORT" DESCRIPTION="Comfort" PASSWORD="1234">
+        <DEVICE ACTIVE="N" DEVICE_TYPE="COMFORT" DESCRIPTION="Comfort" PASSWORD="1234">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
@@ -492,7 +494,7 @@
                 </GC100_Relay>
         </DEVICE>	
         <!-- _____________________________ GC-100 DEFS _____________________________-->
-        <DEVICE ACTIVE="Y" DEVICE_TYPE="GC100" DESCRIPTION="GC100">
+        <DEVICE ACTIVE="N" DEVICE_TYPE="GC100" DESCRIPTION="GC100">
                 <CONNECTION>
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4998"/>
                         <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5005"/>
